Adicionei um 2 no index, e linkei o script.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1> Esse é o Javascript  </h1>
+  <h1> Esse é o Javascript </h1>
+  <h2> Estou estudando git pelo curso da origamid, adicionando alguns gits para testar no site do gitHub</h2>
+  <script src="script.js"></script>
 </body>
 </html>
